<resources>
    <string name="app_name">多省</string>
    <string name="use_moe_saving_more">用多省·省多多！</string>
    <string name="wx_login">微信登录</string>
    <string name="phone_quit_login">手机快速登录</string>
    <string name="menu">菜单</string>
    <string name="back">返回</string>
    <string name="login">登录</string>
    <string name="phone_login">手机登录</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="check_code">短信验证码</string>
    <string name="get_check_code">获取验证码</string>
    <string name="invite_code">邀请码</string>
    <string name="new_user_need_invite_code">新用户需要填写邀请码</string>
    <string name="no_invite_code">没有邀请码？</string>
    <string name="no_invite_desc">多省APP是老会员机制，新会员必须填写邀请码才能正常使用。您可以联系推荐您下载的朋友，他发给您邀请码。</string>
    <string name="no_invite_">没有邀请码？</string>
    <string name="share_accessibility_service_title">多省【多图分享，自动选图】</string>
    <string name="share_accessibility_service_desc">\n到[设置->辅助功能->无障碍~>多省(多图分享,自动选图] ]去开启分享朋友圈自动选图功能。\n\n开启该服务后，可分享多图到朋友圈(自动粘贴文字，自动选择图片，无需手动操作)。\n\n 个别型号的手机，退出APP后，手机会关闭该功能导致失效。出现该情况时，您可以尝试关闭并重新打开该服务，或者重启手机。\n</string>

    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="vip_level">会员级别</string>
    <string name="predict_income">券后</string>
    <string name="rmb_symbol">￥</string>
    <string name="sold">已售</string>
    <string name="ygsy_y">预估收益 ￥</string>
    <string name="yuan">元</string>
    <string name="quan_hou">券后</string>
    <string name="yuan_jia">原价</string>
    <string-array name="main_menu_names">
        <item>淘宝</item>
        <item>天猫超市</item>
        <item>天猫国际</item>
        <item>天猫生鲜</item>
        <item>聚划算</item>
        <item>购物车</item>
        <item>疯抢榜单</item>
        <item>大额券</item>
        <item>高佣榜</item>
        <item>白菜价</item>
    </string-array>
    <!-- 我的收益 -->
    <string-array name="my_income_tab_names">
        <item>今日</item>
        <item>昨日</item>
        <item>近七日</item>
        <item>本月</item>
        <item>上月</item>
    </string-array>
    <!-- 订单明细 -->
    <string-array name="order_tab_names">
        <item>全部</item>
        <item>已付款</item>
        <item>已收货</item>
        <item>已结算</item>
        <item>已退款</item>
    </string-array>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="buy_return">自购返</string>
    <string name="share_take">分享赚</string>
    <string name="invite_promotion_notes">1. 海报是您的专属二维码，好友识别下载后输入邀请码将永久绑定到您账户下  \n2. 好友通过您的邀请码或者邀请海报下载APP后，未来的所有佣金您都可以获得提成，将自动计算到您的提现账户中</string>
    <string name="order_notice">提醒：已确认收货订单15天内不产生退款，每月22号即可结算!</string>


</resources>
