<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <include layout="@layout/action_common_bar"/>
    <TextView
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/text_black"
        android:textSize="24sp"
        android:text="@string/invite_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginLeft="30dp"
        android:textColor="@color/text_light_gray"
        android:textSize="16sp"
        android:text="@string/new_user_need_invite_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_invite_code"
        android:textSize="30sp"
        android:text="87D9LS"
        android:singleLine="true"
        android:maxLines="1"
        android:maxLength="8"
        android:layout_marginTop="48dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@color/transparent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height" />
    <View
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        style="@style/HorizontalLine"
        />
    <LinearLayout
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height">
        <TextView
            android:textSize="14sp"
            android:text="长按粘贴邀请码"
            android:background="@color/transparent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_no_invite"
            android:textSize="14sp"
            android:textColor="@color/text_orange"
            android:text="@string/no_invite_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_margin="30dp"
        android:background="@drawable/round_black_btn_bg"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height" />
    <TextView
        android:gravity="center"
        android:padding="8dp"
        android:id="@+id/tv_err"
        android:textSize="14sp"
        android:textColor="@color/red"
        tools:text="@string/get_check_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>